<resources>
    <string name="app_name">Booky Sporty</string>

    <string name="checkout">Checkout</string>
    <string name="pakai_gopay">Pakai Gopay</string>
    <string name="rp_159_000">Rp 159.000</string>
    <string name="todo">TODO</string>
    <string name="toogle">TODO</string>
    <string name="back">TODO</string>
    <string name="total_booking">Total Booking</string>
    <string name="rp5045">-Rp5045</string>
    <string name="total_price">Total Price</string>
    <string name="rp100_000">Rp100.000</string>
    <string name="discount_5">Discount(5%)</string>
    <string name="_13_000_coins">13.000 coins</string>
    <string name="pakai_coin">Pakai Coin</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="coins">TODO</string>
    <string name="bca_virtual_account">BCA Virtual Account</string>
    <string name="lline_2">TODO</string>
    <string name="gunakan_promo">Gunakan Promo</string>
    <string name="rp_94_955">Rp.94.955</string>
    <string name="bayar">Bayar</string>
    <string name="line_1">line_1</string>
    <string name="next_1">next_1</string>
    <string name="bca">bca</string>
    <string name="next_3">next_3</string>
    <string name="coins_3">coins_3</string>
    <string name="line_4">line_4</string>
    <string name="send">Send</string>
    <string name="_2_4">2/4</string>
    <string name="up_1">TODO</string>
    <string name="back_1">back_1</string>
    <string name="people_1">people_1</string>
    <string name="smile_emote">smile_emote</string>
    <string name="image_1">image_1</string>
    <string name="text_chat">text_chat</string>
    <string name="ticket">ticket</string>
    <string name="lapangan_futsal_purnama">Lapangan Futsal Purnama</string>
    <string name="suzy_queue_4455_louisville">Suzy Queue 4455 Louisville.</string>
    <string name="see_more">see more</string>
    <string name="find_your_comfort_place_to_exercise">Find your comfort place to exercise</string>
    <string name="top_rated">Top Rated</string>
    <string name="background_1">background_1</string>
    <string name="field">Field</string>
    <string name="hi_xxxx">Hi xxxx</string>
    <string name="room">Room</string>
    <string name="suzy_queue_4455_louisville_2">Suzy Queue 4455 Louisville.</string>
    <string name="lapangan_futsal_purnama_2">Lapangan Futsal Purnama</string>
    <string name="open_2">open_2</string>
    <string name="chat_2">chat_2</string>
    <string name="star_7">star_7</string>
    <string name="footer_3">footer_3</string>
    <string name="people_2">people_2</string>
    <string name="home_1">home_1</string>
    <string name="field_3">field_3</string>
    <string name="star_6">star_6</string>
    <string name="star_5">star_5</string>
    <string name="star_4">star_4</string>
    <string name="star3">star3</string>
    <string name="star_2">star_2</string>
    <string name="star_1">star_1</string>
    <string name="room_2">room</string>
    <string name="field_2">field</string>
    <string name="star_8">star_8</string>
    <string name="star_9">star_9</string>
    <string name="task">task</string>
    <string name="text_4">Text_4</string>
    <string name="belll">belll</string>
    <string name="footer_2">footer_2</string>
    <string name="more">more</string>
    <string name="suzy_queue_4455_louisville_3">Suzy Queue 4455 Louisville.</string>
    <string name="join">Join</string>
    <string name="_65rb_jam">65rb/jam</string>
    <string name="foote_4">foote_4</string>
    <string name="star_10">star_1</string>
    <string name="star_11">star_2</string>
    <string name="star_13">star_3</string>
    <string name="star_14">star_4</string>
    <string name="star_15">star_5</string>
    <string name="text_1">Text_1</string>
    <string name="lapangan_futsal_purnama_3">Lapangan Futsal Purnama</string>
    <string name="people_3">people_3</string>
    <string name="garting">garting</string>
    <string name="room_name">Room Name</string>
    <string name="locations">Locations</string>
    <string name="what_sport">What Sport</string>
    <string name="participant">Participant</string>
    <string name="make_room">Make Room</string>
    <string name="drop_down">drop_down</string>
    <string name="input_4">input_4</string>
    <string name="input_5">input_5</string>
    <string name="input_6">input_6</string>
    <string name="input_7">input_7</string>
    <string name="back_3">back_3</string>

</resources>